--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,3 +15,28 @@
 body {
   @apply bg-background text-foreground font-sans;
 }
+
+h1 {
+  @apply text-6xl font-bold;
+}
+
+._halftone {
+  background-image: radial-gradient(circle, #222 1.5px, transparent 1.6px);
+  background-size: 18px 18px;
+  background-position: 0 0;
+}
+
+._halftone::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  pointer-events: none;
+  background: radial-gradient(
+    ellipse at center,
+    rgba(255, 255, 255, 0) 40%,
+    rgba(0, 0, 0, 0.2) 60%,
+    rgba(0, 0, 0, 0.3) 70%,
+    rgba(0, 0, 0, 0.8) 100%
+  );
+  z-index: 1;
+}
